Logut btn alignment issue fix

--- a/src/components/layout/layout.scss
+++ b/src/components/layout/layout.scss
@@ -291,9 +291,9 @@
   .logout-section {
     position: fixed;
     bottom: 1.5rem;
-    left: 3rem;
+    left: 1.8rem;
     .btn {
-      margin: auto;
+      margin: 0 auto;
       text-align: center;
       padding: 0.5rem 5rem 0.5rem 5rem;
       border-radius: 0.3rem;
